--- a/classes/221Fall2021/221Fall2021.md
+++ b/classes/221Fall2021/221Fall2021.md
@@ -52,8 +52,8 @@ If you'd like to offer anonymous feedback to me, click the button below.
 | Monday, November 1 | 3.7 Optimization Problems | [Worksheet 16](Worksheets/221-Wk8.1-Sec 3.7.pdf) | [Solutions](Worksheets/221-Wk8.1-Sec 3.7solns.pdf) |
 | Wednesday, November 3 | 3.7,9 Optimization and Antiderivatives  | [Worksheet 17](Worksheets/221-Wk8.2-Sec3.7and3.9.pdf) | [Solutions](Worksheets/221-Wk8.2-Sec3.7and3.9solns.pdf) |
 | Monday, November 8 | 3.9, 4.1 Antiderivatives and Areas/Distances | [Worksheet 18](Worksheets/221-Wk9.1-Sec3.9 and 4.1.pdf) | [Solutions](Worksheets/221-Wk9.1-Sec3.9 and 4.1solns.pdf) |
-| Wednesday, November 10 | 4.2 The Definite Integral | [Worksheet 19](Worksheets/221-Wk9.2-Sec4.2.pdf) | [Solutions](221-Wk9.2-Sec4.2solns.pdf) |
-| Monday, November 15 | 4.3 The Fundamental Theorem of Calculus| Worksheet 20 |  |
+| Wednesday, November 10 | 4.2 The Definite Integral | [Worksheet 19](Worksheets/221-Wk9.2-Sec4.2.pdf) | [Solutions](Worksheets/221-Wk9.2-Sec4.2solns.pdf) |
+| Monday, November 15 | 4.3 The Fundamental Theorem of Calculus | [Worksheet 20](Worksheets/221-Wk10.1-Sec4.3.pdf) | [Solutions](Worksheets/221-Wk10.1-Sec4.3solns.pdf) |
 | Wednesday, November 17 | 4.4-5 Indefinite Integrals and Substitution Rule  | Worksheet 21 |  |
 | Monday, November 22 | 6.1-2 Inverse and Exponential Functions | Worksheet 22 |  |
 | Wednesday, November 24 | 6.3-4 Logarithmic Functions and their Derivatives | Worksheet 23 | |
@@ -63,7 +63,7 @@ If you'd like to offer anonymous feedback to me, click the button below.
 | Wednesday, December 8 | 5.2 Volumes | Worksheet 27 |
 | Monday, December 13 | 5.3, 5.5 Cyclindrical Shells and Averaging Functions | Worksheet 28 |  |
 | Wednesday, December 15 | N/A | Worksheet 29 |  |
-| | Final Review |   |
+| | Final Review |  | |
 
 
 ## Quizzes
@@ -75,15 +75,15 @@ If you'd like to offer anonymous feedback to me, click the button below.
 | Wednesday, September 29 |  Quiz 3 | [Solutions](/Quizzes/Quiz_3_Solution.pdf) |
 | Wednesday, October 6 |  Quiz 4 | [Solutions](/Quizzes/Quiz_4_Solution.pdf) |
 | Wednesday, October 13  | Quiz 5 | [Solutions](/Quizzes/Quiz_5_Solution.pdf) |
-| Wednesday, October 20 |  Quiz 5 |  |
-| Wednesday, October 27 |  Quiz 6 |  |
-| Wednesday, November 3 |  Quiz 7 |  |
-| Wednesday, November 10 |  Quiz 8 |  |
-| Wednesday, November 17 |  Quiz 9 |  |
-| Wednesday, November 24 |  Quiz 10  |
-| Wednesday, December 1 |  Quiz 11 |  |
-| Wednesday, December 8 |  Quiz 12 |
-| Wednesday, December 15 | Quiz 13 |  |
+| Wednesday, October 20 |  Quiz 6 | [Solutions](/Quizzes/Quiz_6_Solution.pdf) |
+| Wednesday, October 27 |  Quiz 7 |  |
+| Wednesday, November 3 |  Quiz 8 |  |
+| Wednesday, November 10 |  Quiz 9 |  |
+| Wednesday, November 17 |  Quiz 10 |  |
+| Wednesday, November 24 |  Quiz 11  | |
+| Wednesday, December 1 |  Quiz 12 |  |
+| Wednesday, December 8 |  Quiz 13 | |
+| Wednesday, December 15 | Quiz 14 |  |
 
 
 ## Resources
